--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,16 @@
 :feelpp: Feel++
 = {feelpp} myproject 
 
-This is a {feelpp} Template Project.
+image:https://github.com/feelpp/feelpp-project/workflows/CI/badge.svg[CI]
+
+This is a {feelpp} Template Project. It serves as a template for {feelpp} projects.
+
+== Features
+
+* script rename.sh to rename the project
+* cmake environment
+** cpack configuration
+** ctest configuration
+* antora environment
+* github actions
+* vscode integration using container
