--- a/README.adoc
+++ b/README.adoc
@@ -12,3 +12,9 @@ This repository provides a basic starting point for a {feelpp} application inclu
 - [x] documentation using asciidoc and antora
 - [x] continuous integration including tests
 - [x] docker image generation and delivery
+
+== Release process
+
+- [x] update the version in CMakeLists.txt
+- [x] update the version in docs/antora.yml
+- [x] commit the changes with the message "Release vx.y.z". At this point the CI will generate the docker image and push it to docker hub
