--- a/docs/modules/ROOT/pages/antora.adoc
+++ b/docs/modules/ROOT/pages/antora.adoc
@@ -1,18 +1,13 @@
 = Antora environment
 
 Antora is our static website generator. 
-We use it to generate the documentation of the project and upload it to docs.feelpp.org[{feelpp} docs] website.
+We use it to generate the documentation of the project 
+It is part of the documentation of docs.feelpp.org[{feelpp} docs] website.
 
 .To generate the documentation
-----
-cd docs
-antora site.yml
-----
+ $ cd docs
+ $ antora site.yml
 
 .To visualizethe documentation
-----
-# from topevel directory
-node-srv docs/public
-# from docs/
-node-srv docs
-----
+ $ node-srv public 
+
