--- a/docs/modules/ROOT/pages/antora.adoc
+++ b/docs/modules/ROOT/pages/antora.adoc
@@ -5,9 +5,16 @@ We use it to generate the documentation of the project
 It is part of the documentation of docs.feelpp.org[{feelpp} docs] website.
 
 .To generate the documentation
- $ cd docs
- $ antora site.yml
+[source,shell]
+----
+ $ cd docs 
+ $ npm install # <1>
+ $ npm run antora # <2>
+ $ npm run serve # <3>
+----
+<1> Install the dependencies
+<2> Generate the documentation
+<3> Serve the documentation, the url is provided in the console
 
-.To visualizethe documentation
- $ node-srv public 
+
 
