--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -4,5 +4,6 @@
 ** xref:antora.adoc[antora environment]
 ** xref:vscode.adoc[vscode integration]
 ** xref:githubactions.adoc[Github Actions]
-** xref:rename.adoc[Renaminge the project]
+** xref:rename.adoc[Renaming the project]
+** xref:jupyter.adoc[Jupyter Notebook]
 
