--- a/docs/modules/ROOT/pages/antora.adoc
+++ b/docs/modules/ROOT/pages/antora.adoc
@@ -7,10 +7,9 @@ It is part of the documentation of docs.feelpp.org[{feelpp} docs] website.
 .To generate the documentation
 [source,shell]
 ----
- $ cd docs 
  $ npm install # <1>
  $ npm run antora # <2>
- $ npm run serve # <3>
+ $ npm run start # <3>
 ----
 <1> Install the dependencies
 <2> Generate the documentation
