--- a/docs/modules/ROOT/pages/githubactions.adoc
+++ b/docs/modules/ROOT/pages/githubactions.adoc
@@ -3,7 +3,9 @@
 Github actions are setup to 
 
 * build the documentation using Antora and upload them to docs.feelpp.org[{feelpp} docs] upon any change in the repo.
-* build a sample {feelpp} code
+* build, install, package and deliver the {feelpp} code
+
+See the [workflow file](.github/workflows/ci.yml) for more details.
 
 == Skipping a job
 
