--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,33 +1,11 @@
 = {project_name}
-This is a {feelpp} Template Project.    
-It serves s a template for {feelpp} projects.
+:navtitle: home
+:page-layout: home
+:!numbered:
 
-{feelpp} is a {cpp} library for the numerical simulation of partial differential equations. It is designed to be easy to use and to extend.
-{feelpp }is a free software distributed under the terms of the GNU General Public License version 3.
-
-== Installation
-
-The installation procedure is as follows:
-
-[source,bash]
-----
-$ cmake --preset default # <1>
-$ cmake --build --preset default # <2>
-$ cmake --build --preset default -t install # <3>
-$ ctest --preset default # <4>
-$ cmake --build --preset default -t package # <5>
-----
-<1> Configure the project
-<2> Build the project
-<3> Install the project
-<4> Run the tests
-<5> Package the project
-
-
-
-
-
-
+[.lead]
+{project_name} is a {feelpp} project. It was created using the repository https://github.com/feelpp/feelpp-project[`feelpp/feelpp-project`].
+This documentation is here to help you start with {project_name} documentation.
 
 
 
