--- a/docs/modules/ROOT/pages/antora.adoc
+++ b/docs/modules/ROOT/pages/antora.adoc
@@ -15,5 +15,4 @@ It is part of the documentation of docs.feelpp.org[{feelpp} docs] website.
 <2> Generate the documentation
 <3> Serve the documentation, the url is provided in the console
 
-
-
+include::antora-ui::partial$antora.adoc[leveloffset=+1]
