--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,14 +1,29 @@
 = {project_name}
 :navtitle: home
-:page-layout: home
+:page-layout: home-project
 :!numbered:
 
+ifeval::["{project_name}" == "Feel++ Template Project"]
 [.lead]
-{project_name} is a {feelpp} project. It was created using the repository https://github.com/feelpp/feelpp-project[`feelpp/feelpp-project`].
+{project_name} is a GitHub repository template providing a starting point for {feelpp} projects.
+endif::[]
+ifeval::["{project_name}" != "Feel++ Template Project"]
+{project_name} is a {feelpp} project. It was created using the repository template https://github.com/feelpp/feelpp-project[`feelpp/feelpp-project`].
+endif::[]
 
-Coding:: xref:overview.adoc[{feelpp} {cpp} and {python}] codes are available to help you get starting with using and coding with {feelpp}.
+NOTE: this documentation serves as a template for your project. You can edit it to fit your needs. You can also remove it if you don't need it.
 
-Documenting:: The xref:overview.adoc[documentation] is written using the https://docs.asciidoc.org[Asciidoc plain text format] and https://docs.antora.org[Antora] to produce the documentation website. It is here to help you start with {project_name} documentation.
+.Coding with {feelpp} in {cpp} or {python}
+[.examp]
+****
+xref:overview.adoc[{feelpp} {cpp} and {python}] codes are available to help you get started with using and coding with {feelpp}.
+****
+
+.Documenting your work with Asciidoc and Antora
+[.examp]
+****
+The documentation is written using the https://docs.asciidoctor.org[Asciidoc plain text format] and https://docs.antora.org[Antora] to produce the documentation website. Checkout xref:antora.adoc[this page], it is here to help you get started with creating documentation.
+****
 
 
 
