--- a/docs/modules/ROOT/pages/overview.adoc
+++ b/docs/modules/ROOT/pages/overview.adoc
@@ -27,7 +27,7 @@ The documentation is available https://docs.feelpp.org[> here].
 == How to build the project
 
 You need first to follow the xref:quickstart.adoc[quickstart] to get the {feelpp} environment.
-The installation procedure uses xref:cmake.adoc[Cmake] for the {cpp} programs and create a bundle of this project.
+The installation procedure uses xref:env/cmake.adoc[Cmake] for the {cpp} programs and create a bundle of this project.
 The steps are as follows:
 
 [source,bash]
@@ -46,7 +46,7 @@ $ cmake --build --preset default -t package # <5>
 
 == How to start documenting your work
 
-The documentation is written in Asciidoc and uses Antora to generate the documentation. Please check the project xref:antora.adoc[Antora] page to get started.
+The documentation is written in Asciidoc and uses Antora to generate the documentation. Please check the project xref:env/antora.adoc[Antora] page to get started.
 
 
 
