--- a/docs/modules/ROOT/pages/env/antora.adoc
+++ b/docs/modules/ROOT/pages/env/antora.adoc
@@ -2,7 +2,7 @@
 
 Antora is our static website generator. 
 We use it to generate the documentation of the project 
-It is part of the documentation of docs.feelpp.org[{feelpp} docs] website.
+It is part of the documentation of https://docs.feelpp.org[{feelpp} docs] website.
 
 .To generate the documentation
 [source,shell]
@@ -13,6 +13,4 @@ It is part of the documentation of docs.feelpp.org[{feelpp} docs] website.
 ----
 <1> Install the dependencies
 <2> Generate the documentation
-<3> Serve the documentation, the url is provided in the console
-
-include::antora-ui::partial$antora.adoc[leveloffset=+1]
+<3> Serve the documentation, the URL is provided in the console
