--- a/docs/modules/ROOT/pages/env/antora.adoc
+++ b/docs/modules/ROOT/pages/env/antora.adoc
@@ -1,4 +1,4 @@
-= Antora environment
+= Antora Environment
 
 Antora is our static website generator. 
 We use it to generate the documentation of the project 
