--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -19,7 +19,7 @@ NOTE: this documentation serves as a template for your project. You can edit it 
 xref:overview.adoc[{feelpp} {cpp} and {python}] codes are available to help you get started with using and coding with {feelpp}.
 ****
 
-.Documenting your work with Asciidoc and Antora
+.Documenting your work with AsciiDoc and Antora
 [.examp]
 ****
 The documentation is written using the https://docs.asciidoctor.org[Asciidoc plain text format] and https://docs.antora.org[Antora] to produce the documentation website. Checkout xref:env/antora.adoc[this page], it is here to help you get started with creating documentation.
