--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,6 +1,8 @@
 * xref:index.adoc[Introduction]
 * xref:quickstart.adoc[]
 * xref:overview.adoc[]
+* xref:examples/index.adoc[Examples]
+** xref:examples/fin.adoc[Thermal Fin]
 * Setting up the development Environment
 ** xref:env/cmake.adoc[]
 ** xref:env/antora.adoc[]
