--- a/docs/modules/ROOT/pages/examples/fin.adoc
+++ b/docs/modules/ROOT/pages/examples/fin.adoc
@@ -6,8 +6,10 @@ Christophe Prud'homme
 :page-illustration: fin2d-4.png
 :description: We simulate the heat transfer in a thermal fin
 
-We consider the problem of designing a thermal fin to effectively remove heat from a surface. The two-dimensional fin, shown in Figure 1, consists of a vertical central post and four horizontal subfins; the fin conducts heat from a prescribed uniform flux source at the root, stem:[\Gamma_{\text {root }}], through the large-surface-area subfins to surrounding flowing air. The fin is characterized by a five-component parameter vector, or input, stem:[\mu_{=}\left(\mu_1, \mu_2, \ldots, \mu_5\right)], where stem:[\mu_i=k^i, i=1, \ldots, 4], and stem:[\mu_5=\mathrm{Bi} ; \mu] may take on any value in a specified design set stem:[D \subset \mathbb{R}^5].
+We consider the problem of designing a thermal fin to effectively remove heat from a surface. The two-dimensional fin, shown in Figure below, consists of a vertical central post and four horizontal subfins; the fin conducts heat from a prescribed uniform flux source at the root, stem:[\Gamma_{\text {root }}], through the large-surface-area subfins to surrounding flowing air. The fin is characterized by a five-component parameter vector, or input, stem:[\mu_{=}\left(\mu_1, \mu_2, \ldots, \mu_5\right)], where stem:[\mu_i=k^i, i=1, \ldots, 4], and stem:[\mu_5=\mathrm{Bi} ; \mu] may take on any value in a specified design set stem:[D \subset \mathbb{R}^5].
 
+.Geometry of 2D thermal fin
+image::find2d-4-mesh.png[width=300px]
 
 Here stem:[k^i] is the thermal conductivity of the ith subfin (normalized relative to the post conductivity stem:[k^0 \equiv 1] ); and stem:[\mathrm{Bi}] is the Biot number, a nondimensional heat transfer coefficient reflecting convective transport to the air at the fin surfaces (larger stem:[\mathrm{Bi}] means better heat transfer). For example, suppose we choose a thermal fin with stem:[k^1=0.4, k^2=0.6, k^3=0.8, k^4=1.2], and stem:[\mathrm{Bi}=0.1]; for this particular configuration stem:[\mu=\{0.4,0.6,0.8,1.2,0.1\}], which corresponds to a single point in the set of all possible configurations D (the parameter or design set). The post is of width unity and height four; the subfins are of fixed thickness stem:[t=0.25] and length stem:[L=2.5].
 
@@ -42,9 +44,7 @@ which models the convective heat losses. Here stem:[\Gamma_{\text {ext }}^i] is 
 
 == Implementation
 
-== Implementation
-
-First, we initialize the Feel++ environment and set the working directory.
+First, we initialize the {feelpp} environment and set the working directory.
 
 [%dynamic,python]
 ----
