fix rename script #125
fix rename script #125

This commit fixes the rename script, updating the naming of the Feel++ template project. The project template in the README.adoc and README.md files has been renamed from "{feelpp} Project Template" to "{feelpp} Template Project". The pyproject.toml file has also been updated with the correct description.

--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 :cpp: C++
 :project: feelpp-project 
 
-= {feelpp} Project Template
+= {feelpp} Template Project 
 Christophe Prud'homme <https://github.com/prudhomm[@prudhomm]>
 v2: 
 
