Refactor project structure and update import paths
- Updated the wheel package path in pyproject.toml to reflect the new directory structure.
- Changed the welcome message and import statements in the laplacian.ipynb notebook to use the correct module path.
- Modified CMakeLists.txt to install targets in the updated directory structure for the Feel++ project.

#143

--- a/docs/modules/ROOT/pages/examples/fin.adoc
+++ b/docs/modules/ROOT/pages/examples/fin.adoc
@@ -54,7 +54,7 @@ First, we initialize the {feelpp} environment and set the working directory.
 [%dynamic,python]
 ----
 import feelpp.core as fppc
-from feelpp_project import laplacian
+from feelpp.project import laplacian
 import json
 import os
 
