--- a/src/cases/laplacian/laplacian.ipynb
+++ b/src/cases/laplacian/laplacian.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome in feelpp_project!\n",
+      "Welcome in feelpp.project!\n",
       "directory=/nvme0/prudhomm/Devel/feelpp-project/src/cases/laplacian\n",
       "[ Starting Feel++ ] application fin version 0.1 date 2023-Nov-02\n",
       "[feelpp] create Feel++ root repository: /nvme0/prudhomm/Devel/feelpp-project/src/cases/laplacian/feelppdb\n",
@@ -29,7 +29,7 @@
    ],
    "source": [
     "import feelpp\n",
-    "from feelpp_project import laplacian\n",
+    "from feelpp.project import laplacian\n",
     "import json\n",
     "import os\n",
     "\n",
